now working on backend

--- a/frontend/src/containers/Cart/Order/Order.module.css
+++ b/frontend/src/containers/Cart/Order/Order.module.css
@@ -1,3 +1,16 @@
 .image{
     width: 100px;
 }
+
+.li{
+    text-decoration: none;
+}
+
+.quantity{
+    display: block;
+    text-align: middle;
+}
+
+.text{
+    margin: auto 0;
+}
