connect signUp with backend

--- a/frontend/src/containers/Login/SignUp/SignUp.module.css
+++ b/frontend/src/containers/Login/SignUp/SignUp.module.css
@@ -12,3 +12,12 @@
     margin: 10px;
     width: 85%;
 }
+
+.error{
+    border-color: red;
+}
+
+.error:focus{
+    outline: none !important;
+    border-color: red;
+}
