--- a/frontend/src/containers/Cart/Order/Order.module.css
+++ b/frontend/src/containers/Cart/Order/Order.module.css
@@ -14,3 +14,12 @@
 .text{
     margin: auto 0;
 }
+
+.order{
+    display: flex;
+    /* justify-content: space-between; */
+}
+
+.specs{
+    padding: 0 20px;
+}
